# nl2sql

./: .gitignore  Makefile  README.md  pyproject.toml
api/: __init__.py  main.py
api/core/: __init__.py  config.py  logging.py
api/middleware/: __init__.py  request_logger.py
api/models/: __init__.py  chat.py  responses.py
api/prompts/: __init__.py  prompts.py  sql_prompts.py
api/routers/: __init__.py  chat.py  health.py  info.py
api/services/: __init__.py  ai_service.py  chat.py  chat_service.py  database_service.py  sql_service.py  suggestion_service.py
api/tools/: __init__.py  calculator.py  sql_tools.py  weather.py
api/utils/: __init__.py  sql_utils.py
client/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
client/src/: App.tsx  index.css  main.tsx
client/src/components/ai-elements/: conversation.tsx  inline-citation.tsx  message.tsx  suggestion.tsx
client/src/components/chat/: ChatEmptyState.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessages.tsx  ChatTools.tsx  MessageActions.tsx  index.tsx
client/src/hooks/: index.ts  useAiChat.ts  useStreamingApi.ts  useSuggestions.ts
