[project]
name = "nl2sql"
version = "0.1.0"
description = "Natural Language to SQL conversion API using LangChain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "langchain>=1.1.0",
    "langchain-core>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-community>=0.3.7",
    "langchain-classic>=1.0.0",
    "langgraph>=0.2.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = ["requests>=2.32.5"]
